Terraform Scripts/Bookmybook_tf/modules/ecs-sg/sg.tf
resource "aws_security_group" "ecs_sg" {
  vpc_id = "vpc-08963081b8c5b09a6" #var.vpc_id
  name   = var.name
  tags   = var.tags

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
